infrastructure/apps/keycloak/base/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.1
          imagePullPolicy: IfNotPresent
          args: ["start-dev", "--http-port=8080", "--proxy=edge"]
          ports:
            - containerPort: 8080
